<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_slate_gray"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_main_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/description_main_logo"
            android:src="@drawable/ic_main_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dimen_default"
            android:fontFamily="@font/inter_extra_bold"
            android:text="Gestión&#10;de reserva&#10;restaurantes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_main_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:backgroundTint="@color/flame"
            android:fontFamily="@font/inter_bold"
            android:paddingVertical="@dimen/common_dimen_min"
            android:text="@string/text_button_login"
            android:textAllCaps="false"
            android:textSize="@dimen/common_letter_size_big"
            app:cornerRadius="@dimen/common_dimen_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dimen_long"
            android:backgroundTint="@color/flame"
            android:fontFamily="@font/inter_bold"
            android:paddingVertical="@dimen/common_dimen_min"
            android:text="@string/text_button_register"
            android:textAllCaps="false"
            android:textSize="@dimen/common_letter_size_big"
            app:cornerRadius="@dimen/common_dimen_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_dimen_default"
            android:fontFamily="sans-serif-light"
            android:text="@string/text_footer"
            android:textColor="@color/xanadu"
            android:textSize="@dimen/common_letter_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintVertical_bias="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>